--- a/dev/index_modules.html
+++ b/dev/index_modules.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
 <link rel="stylesheet" href="style.css" type="text/css">
@@ -7,18 +6,16 @@
 <link title="Index of types" rel=Appendix href="index_types.html">
 <link title="Index of values" rel=Appendix href="index_values.html">
 <link title="Index of modules" rel=Appendix href="index_modules.html">
-<link title="Bigstring" rel="Chapter" href="Bigstring.html"><title></title>
+<link title="Bigstring" rel="Chapter" href="Bigstring.html"><title>Index of modules</title>
 </head>
 <body>
-<h1></h1>
-<ul class="indexlist">
-<li><a href="index_types.html">Index of types</a></li>
-<li><a href="index_values.html">Index of values</a></li>
-<li><a href="index_modules.html">Index of modules</a></li>
-</ul>
-<br/><br>
-<table class="indextable">
-<tr><td class="module"><a href="Bigstring.html">Bigstring</a></td><td><div class="info">
+<div class="navbar">&nbsp;<a class="up" href="index.html" title="Index">Up</a>
+&nbsp;</div>
+<h1>Index of modules</h1>
+<table>
+<tr><td align="left"><br>B</td></tr>
+<tr><td><a href="Bigstring.html">Bigstring</a> </td>
+<td><div class="info">
 Interface to 1-dimension Bigarrays of bytes (char)
 </div>
 </td></tr>
