--- a/dev/index.html
+++ b/dev/index.html
@@ -1,27 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<link rel="stylesheet" href="style.css" type="text/css">
-<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
-<link rel="Start" href="index.html">
-<link title="Index of types" rel=Appendix href="index_types.html">
-<link title="Index of values" rel=Appendix href="index_values.html">
-<link title="Index of modules" rel=Appendix href="index_modules.html">
-<link title="Bigstring" rel="Chapter" href="Bigstring.html"><title></title>
-</head>
-<body>
-<h1></h1>
-<ul class="indexlist">
-<li><a href="index_types.html">Index of types</a></li>
-<li><a href="index_values.html">Index of values</a></li>
-<li><a href="index_modules.html">Index of modules</a></li>
-</ul>
-<br/><br>
-<table class="indextable">
-<tr><td class="module"><a href="Bigstring.html">Bigstring</a></td><td><div class="info">
-Interface to 1-dimension Bigarrays of bytes (char)
-</div>
-</td></tr>
-</table>
-</body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>index</title>
+    <link rel="stylesheet" href="./odoc.css"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  </head>
+  <body>
+    <div class="by-name">
+    <h2>OCaml package documentation</h2>
+    <ol>
+    <li><a href="bigstring-unix/index.html">bigstring-unix</a> <span class="version">0.1.1</span></li>
+    <li><a href="bigstring/index.html">bigstring</a> <span class="version">0.1.1</span></li>
+    </ol>
+    </div>
+  </body>
 </html>
